Bug #25698025 - MYSQL FOR EXCEL GETS HANGED WHEN CONNECTOR NET IS INSTALLED Bug #25962347 - ERROR OPENING A SCHEMA IN A MYSQL SERVER 8.0 Bug #25962564 - DISABLED SSH CONNECTIONS ARE SELECTABLE BUT DOUBLE-CLICKING THEM FAILS WL10727 - Remove Fabric support
- Updated the MySQL.Utility DLL with the latest version that no longer uses a customized version of the MySqlConnectionStringBuilder class, and ships with the base MySql.Data.dll. (source\libraries\MySQL.Utility.dll)
- Changed the minimum required .NET version from 4 Client Profile to 4.0 Full, since the MySQL Utility now targets .NET 4.0 Full. (Installer\main.wxs, source\app.config, source\MySQL.ForExcel.csproj)
- Removed images and references to Fabric connections. Replaced existing connection images with the ones used in MySQL for Visual Studio for consistency and to show with a different icon all supported connection types including X Protocol ones. (source\Resources\MySQLforExcel-WelcomePanel-Connection-Fabric.png, source\Resources\Connection-X-32x32.png, source\Resources\Connection-Socket-32x32.png, source\Resources\Connection-SSH.png, source\Resources\Connection-TCP-32x32.png, source\MySQL.ForExcel.csproj, source\Properties\Resources.Designer.cs, source\Properties\Resources.resx, source\Panels\WelcomePanel.cs)
- Added code to the WelcomePanel constructor to add to the ImagesList grayscale version of images corresponding to connections not currently supported by MySQL for Excel (SSH and X). Added code to the LoadConnections method to skip loading unknown and Fabric connections. Added code to the AddConnectionToList to assign a different icon and Enabled status to all connection types except for FabricManaged which is Obsolete. (source\Panels\WelcomePanel.cs)
- Changed in the LoadProcedures method, the call to MySqlWorkbenchConnection.GetSchemaInformation to use SchemaInformationType.Routines instead of SchemaInformationType.Procedures just for the sake of using the GetRoutines methid in the MySQL Utility inst

--- a/Installer/main.wxs
+++ b/Installer/main.wxs
@@ -38,10 +38,9 @@
     </Condition>
 
     <!-- Check if .NET FW 4.0 or greater is installed -->
-    <PropertyRef Id="NETFRAMEWORK40CLIENT"/>
     <PropertyRef Id="NETFRAMEWORK40FULL"/>
     <Condition Message="This application requires .NET Framework 4.0. Please install the .NET Framework then run this installer again.  For more information, please see http://go.microsoft.com/fwlink/?LinkId=181012">
-      <![CDATA[Installed OR NETFRAMEWORK40FULL OR NETFRAMEWORK40CLIENT]]>
+      <![CDATA[Installed OR NETFRAMEWORK40FULL]]>
     </Condition>
 
     <!-- See if Office 2007 (only 32bit version is available) is installed -->
