--- a/Installer/main.wxs
+++ b/Installer/main.wxs
@@ -37,10 +37,10 @@
       <![CDATA[Installed OR VSTO_X86_INSTALLED OR VSTO_X64_INSTALLED]]>
     </Condition>
 
-    <!-- Check if .NET FW 4.0 or greater is installed -->
-    <PropertyRef Id="NETFRAMEWORK40FULL"/>
-    <Condition Message="This application requires .NET Framework 4.0. Please install the .NET Framework then run this installer again.  For more information, please see http://go.microsoft.com/fwlink/?LinkId=181012">
-      <![CDATA[Installed OR NETFRAMEWORK40FULL]]>
+    <!-- Check if .NET FW 4.5.2 or greater is installed -->
+    <PropertyRef Id="WIX_IS_NETFRAMEWORK_452_OR_LATER_INSTALLED"/>
+    <Condition Message="This application requires .NET Framework 4.5.2. Please install the .NET Framework then run this installer again.  For more information, please see https://www.microsoft.com/en-us/download/details.aspx?id=42642">
+      <![CDATA[Installed OR WIX_IS_NETFRAMEWORK_452_OR_LATER_INSTALLED]]>
     </Condition>
 
     <!-- See if Office 2007 (only 32bit version is available) is installed -->
