Bug #18550080 - SUPPORT FOR SSL CONNECTIONS TO MYSQL
- Updated the MySql.Data and MySql.Utility libraries with the latest versions to add SSH tunneled and SSL connections support. (source/libraries/MySQL.Utility.dll, source/libraries/MySql.Data.dll)
- Added the Renci.SshNet.dll to the distributed assemblies since it is needed by MySql.Data to establish SSH tunneled connections. (source/libraries/Renci.SshNet.dll, Installer/main.wxs)
- Modified the LoadConnections method to only filter out unknown connections. Modified the AddConnectionToList method to enable connections previously not supported (SSL and SSH) and to disable X Protocol connections. (source/Panels/WelcomePanel.cs)
- Removed the Label_Paint method since it is no longer needed on inheriting classes. (source/Panels/AutoStyleableBasePanel.cs)
- Added new icons to display in the Schema and DB Objects Selection panels the current user, connection and schema information. (source/Resources/network_light.png, source/Resources/schema_light.png, source/Resources/user_light.png, source/Properties/Resources.Designer.cs, source/Properties/Resources.resx, source/MySQL.ForExcel.csproj, source/Panels/DBObjectSelectionPanel.Designer.cs, source/Panels/DBObjectSelectionPanel.cs, source/Panels/DBObjectSelectionPanel.resx, source/Panels/SchemaSelectionPanel.Designer.cs, source/Panels/SchemaSelectionPanel.cs, source/Panels/SchemaSelectionPanel.resx)
- Modified code in the MySqlListViewNode constructor to display the subtitle for connection nodes in a standard way using the new MySqlWorkbenchConnection.DisplayConnectionSummaryText property. (source/Classes/MySqlListViewNode.cs)
- Removed the GetHostnameForConnectionsSubtitle method, since now the information comes from the MySqlWorkbenchConnection.DisplayConnectionSummaryText property. (source/Classes/MySQLDataUtilities.cs)

--- a/Installer/main.wxs
+++ b/Installer/main.wxs
@@ -58,6 +58,7 @@
               <File Id="MySql.Utility" Name="MySQL.Utility.dll" Source="..\Source\bin\Release\MySQL.Utility.dll" />
               <File Id="MySql.Utility.RegularExpressions" Name="MySql.Utility.RegularExpressions.dll" Source="..\Source\bin\Release\MySql.Utility.RegularExpressions.dll" />
               <File Id="MySql.Data" Name="MySql.Data.dll" Source="..\Source\bin\Release\MySql.Data.dll" />
+              <File Id="Renci.SshNet" Name="Renci.SshNet.dll" Source="..\Source\bin\Release\Renci.SshNet.dll" />
               <File Id="v40Utilities" Name="Microsoft.Office.Tools.Common.v4.0.Utilities.dll" Source="..\Source\bin\Release\Microsoft.Office.Tools.Common.v4.0.Utilities.dll" />
               <File Id="VSTOFile" Name="MySQL.ForExcel.vsto" Source="..\Source\bin\Release\MySQL.ForExcel.vsto" />
               <File Id="AddIn" Name="MySQL.ForExcel.dll" KeyPath="yes" Source="..\Source\bin\Release\MySQL.ForExcel.dll" />
